--- a/assignment3/app/views/home/_content.html.erb
+++ b/assignment3/app/views/home/_content.html.erb
@@ -1,1 +1,43 @@
-<footer id="container2" > </footer>
+<footer id="container2" >
+  <div class="card">
+    <%= image_tag "carbonara.jpg", class:"dish-image" %>
+    <div class="card-details-container">
+      <h4><b>Pasta Carbonara</b></h4>
+      <p>Second courses</p>
+      <p class="dish-price">$9.00</p>
+    </div>
+  </div>
+  <div class="card">
+    <%= image_tag "soup.jpg", class:"dish-image" %>
+    <div class="card-details-container">
+      <h4><b>Chicken Soup</b></h4>
+      <p>Entrees</p>
+      <p class="dish-price">$13.00</p>
+    </div>
+  </div>
+  <div class="card">
+    <%= image_tag "salad2.jpg", class:"dish-image" %>
+    <div class="card-details-container">
+      <h4><b>Vitamin Salad</b></h4>
+      <p>Salads</p>
+      <p class="dish-price">$7.00</p>
+    </div>
+  </div>
+  <div class="card">
+    <%= image_tag "pizza.jpg", class:"dish-image" %>
+    <div class="card-details-container">
+      <h4><b>Pizza</b></h4>
+      <p>Main Course</p>
+      <p class="dish-price">$15.00</p>
+    </div>
+  </div>
+  <div class="card">
+    <%= image_tag "pancakes.jpg", class:"dish-image" %>
+    <div class="card-details-container">
+      <h4><b>Pancakes</b></h4>
+      <p>Dessert</p>
+      <p class="dish-price">$7.00</p>
+    </div>
+  </div>
+  </div>
+</footer>
