bootstrap and javascript work

--- a/assignment3/app/views/home/_navbar.html.erb
+++ b/assignment3/app/views/home/_navbar.html.erb
@@ -1,7 +1,7 @@
 
 <div class="nav">
-  <ul  class="no-bullets navigation-list">
-    <li class="navigation-item dropdown active">
+  <ul id= "no-bullets" class="no-bullets navigation-list">
+    <li class="navigation-item dropdown active no-bullets" style="list-style-type: none;">
       <a class="nav-link" href="#" id="navbarDropdown" role="button"
          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Category
@@ -14,7 +14,7 @@
       </div>
 
     </li>
-    <li class="navigation-item dropdown active">
+    <li class="navigation-item dropdown active" style="list-style-type: none;">
       <a class="nav-link" href="#" id="navbarDropdown" role="button"
          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Sorting
@@ -26,7 +26,7 @@
         <a class="dropdown-item" href="#">2</a>
       </div>
     </li>
-    <li class="navigation-item dropdown active">
+    <li class="navigation-item dropdown active" style="list-style-type: none;">
       <a class="nav-link" href="#" id="navbarDropdown" role="button"
          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
         Vegetarian
@@ -40,5 +40,5 @@
     </li>
   </ul>
   <p class="paragraph3">Price</p>
-  <div id="range" > </div>
+  <div id="range"> </div>
 </div>
