--- a/assignment3/app/views/home/index.html.erb
+++ b/assignment3/app/views/home/index.html.erb
@@ -2,16 +2,16 @@
   <div class="container">
     <%= image_tag "logo.png", class:"logo" %>
     <p class="logo-name">EUREKA CAFFE</p>
-    <ul class="no-bullets menu">
-      <li class="list-item"> HOME</li>
+    <ul class="no-bullets">
+      <li> HOME</li>
       <span class='bullet'></span>
-      <li class="list-item"> ABOUT</li>
+      <li> ABOUT</li>
       <span class='bullet'></span>
-      <li class="list-item"> SERVICE</li>
+      <li> SERVICE</li>
       <span class='bullet'></span>
-      <li class="list-item"> BLOG</li>
+      <li> BLOG</li>
       <span class='bullet'></span>
-      <li class="list-item"> CONTACTS</li>
+      <li> CONTACTS</li>
     </ul>
   </div>
   <h1 class="title"> Ordering Food </h1>
@@ -33,5 +33,5 @@
 </header>
 <div>
   <%= render "home/navbar" %>
-  <%= render "home/content" %>
+  <%= render "home/content"%>
 </div>
