--- a/assignment3/app/assets/stylesheets/home.scss
+++ b/assignment3/app/assets/stylesheets/home.scss
@@ -1,10 +1,53 @@
 // Place all the styles related to the Home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
-
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
 $primary-color: white;
 $secondary-color: orange;
+$font: Arial;
 
 *, html {
   margin:0 ;
@@ -17,57 +60,57 @@ $secondary-color: orange;
   background-size: cover;
   background-image: url("coffee_shop3.jpg");
   height: 100%;
-}
-    .container {
-      display: flex;
-      overflow: hidden;
+
+  .container {
+    display: flex;
+    overflow: hidden;
+
+    .logo {
+      height: 50px;
+      width: 50px;
+      margin-left: 100px;
+      margin-top: 25px;
+      border-radius: 50%;
+      margin-right: 10px;
     }
 
-  .logo {
-    height: 50px;
-    width: 50px;
-    margin-left: 100px;
-    margin-top: 25px;
-    border-radius: 50%;
-    margin-right: 10px;
-  }
+    .logo-name {
+      color: $primary-color;
+      margin-top: 30px;
+      font-size: small;
+    }
 
-  .logo-name {
-    color: $primary-color;
-    margin-top: 30px;
-    font-size: small;
-  }
+    .no-bullets {
+      list-style-type: none;
+    }
 
-  .no-bullets {
-    list-style-type: none;
-  }
+    ul {
+      display: flex;
+      justify-content: flex-end;
+      flex-direction: row;
+      color: $primary-color;
+      margin-right: 100px;
+      margin-top: 40px;
+      margin-left: 50%;
 
-  .menu {
-    display: flex;
-    justify-content: flex-end;
-    flex-direction: row;
-    color: $primary-color;
-    margin-right: 100px;
-    margin-top: 40px;
-    margin-left: 50%;
-  }
+      li {
+        margin-right: 20px;
+        font-size: small;
+        font-family: $font;
+      }
+    }
 
-  .list-item {
-    margin-right: 20px;
-    font-size: small;
-    font-family: Arial;
-  }
-
-  .bullet {
-    background-color: $secondary-color;
-    display: inline-block;
-    vertical-align: middle;
-    background-size: 100%;
-    height: 5px;
-    width: 5px;
-    margin-right: 25px;
-    border-radius: 50%;
-    margin-top: 5px;
+    .bullet {
+      background-color: $secondary-color;
+      display: inline-block;
+      vertical-align: middle;
+      background-size: 100%;
+      height: 5px;
+      width: 5px;
+      margin-right: 25px;
+      border-radius: 50%;
+      margin-top: 5px;
+    }
   }
 
   .title {
@@ -83,41 +126,41 @@ $secondary-color: orange;
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
-  }
 
-  .logo2 {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    margin-top: 30px;
-    margin-right: 20px;
-  }
+    .logo2 {
+      width: 30px;
+      height: 30px;
+      border-radius: 50%;
+      margin-top: 30px;
+      margin-right: 20px;
+    }
 
-  .holder {
-    position: relative;
-    width: 200px;
-    height: 50px;
-    top: 25px;
-    margin-right: 20px;
-  }
+    .holder {
+      position: relative;
+      width: 200px;
+      height: 50px;
+      top: 25px;
+      margin-right: 20px;
 
-  .tiny-line {
-    position: absolute;
-    height: 40px;
-    width: 1000%;
-    transform: translateX(-45%) scale(0.1);
-  }
+      .tiny-line {
+        position: absolute;
+        height: 40px;
+        width: 1000%;
+        transform: translateX(-45%) scale(0.1);
+      }
 
-  .tiny-line1 {
-    background: linear-gradient(45deg, transparent, transparent 49%, $primary-color 49%, transparent 51%);
-  }
+      .tiny-line1 {
+        background: linear-gradient(45deg, transparent, transparent 49%, $primary-color 49%, transparent 51%);
+      }
 
-  .tiny-line2 {
-    background: linear-gradient(-45deg, transparent, transparent 49%, $primary-color 49%, transparent 51%);
-  }
+      .tiny-line2 {
+        background: linear-gradient(-45deg, transparent, transparent 49%, $primary-color 49%, transparent 51%);
+      }
 
-  .tiny-line {
-    background-size: 80px 80px;
+      .tiny-line {
+        background-size: 80px 80px;
+      }
+    }
   }
 
   .paragraph1 {
@@ -126,97 +169,92 @@ $secondary-color: orange;
     align-items: center;
     color: $primary-color;
     text-align: center;
-  }
 
-  .paragraph2 {
-    padding-bottom: 100px;
-    font-size: large;
-    margin-left: 500px;
-    margin-right: 500px;
-    text-align: center;
+    .paragraph2 {
+      padding-bottom: 100px;
+      font-size: large;
+      margin-left: 500px;
+      margin-right: 500px;
+      text-align: center;
+    }
   }
-
+}
 
 .nav {
   background-color: gainsboro;
+
+  .navigation-list {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row;
+    padding-top: 10px;
+    margin-left: 250px;
+    margin-right: 400px;
+
+    .navigation-item {
+      margin-right: 50px;
+      font-size: medium;
+      color: black;
+    }
+  }
+
+  .arrow {
+    border: solid $secondary-color;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    margin-bottom: 3px;
+  }
+
+  .nav-link {
+    color: black;
+    margin-right: 20px;
+  }
 }
 
-.navigation-list {
-  display:flex;
-  justify-content: flex-start;
-  flex-direction: row;
-  padding-top: 10px;
-  margin-left: 250px;
-  margin-right: 400px;
-}
-
-.navigation-item {
-  margin-right: 50px;
-  font-size:medium;
-  color:black;
-}
-
-.arrow {
-  border: solid $secondary-color;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 3px;
-}
-
-.down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-}
-
-.nav-link{
-  color:black;
-  margin-right: 20px;
-}
-
-.arrows{
-  margin-bottom:3px;
-}
-
-#container2{
-  display:flex;
-  flex-wrap:wrap;
+#container2 {
+  display: flex;
+  flex-wrap: wrap;
   margin-right: 150px;
   margin-left: 150px;
   margin-top: 50px;
   margin-bottom: 50px;
   justify-content: center;
-}
 
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  margin-right: 5px;
-  margin-bottom: 10px;
-}
+  .card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    margin-right: 5px;
+    margin-bottom: 10px;
 
-.card:hover {
-  box-shadow: 0 10px 20px 0 rgba(0,0,0,1);
-}
+    .card-details-container {
+      padding: 2px 16px;
+      text-align: center;
+    }
 
-.card-details-container {
-  padding: 2px 16px;
-  text-align: center;
-}
+    .dish-image {
+      width: 300px;
+      height: 200px;
+    }
 
-.dish-image {
-  width:300px;
-  height:200px;
-}
+    .dish-price {
+      color: $secondary-color;
+      font-weight: bold;
+    }
+  }
 
-.dish-price {
-  color:$secondary-color;
-  font-weight: bold;
+  .card:hover {
+    box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 1);
+  }
 }
 
 .paragraph3 {
   margin-top: 20px;
   margin-right: 10px;
 }
+
 .noUi-pips-horizontal {
   display: none !important;
 }
