place .idea in gitignore and css reset in another file

--- a/assignment3/app/assets/stylesheets/application.scss
+++ b/assignment3/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
  */
 @import "nouislider";
 @import "home.scss";
-
+@import "bootstrap/scss/bootstrap";
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
