--- a/assignment3/app/views/home/_navbar.html.erb
+++ b/assignment3/app/views/home/_navbar.html.erb
@@ -37,6 +37,9 @@
         <a class="dropdown-item" href="#">Soups</a>
       </div>
     </li>
+    <li class="navigation-item" style="list-style-type: none;">
+      <a class="nav-link" href="/addproduct" role="button" aria-haspopup="true" aria-expanded="false">Add Product</a>
+    </li>
   </ul>
   <p class="paragraph3">Price</p>
   <div id="range"> </div>
