--- a/assignment3/app/views/home/_navbar.html.erb
+++ b/assignment3/app/views/home/_navbar.html.erb
@@ -42,5 +42,5 @@
     </li>
   </ul>
   <p class="paragraph3">Price</p>
-  <div id="range"> </div>
+  <div id="range", style="margin-top: 15px"> </div>
 </div>
