--- a/assignment3/app/assets/stylesheets/application.scss
+++ b/assignment3/app/assets/stylesheets/application.scss
@@ -13,9 +13,12 @@
  *= require_tree .
  *= require_self
  */
-
+@import "bootstrap-sprockets";
+@import "bootstrap";
+@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css");
+@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
 @import "nouislider";
 @import "home.scss";
-@import "bootstrap/scss/bootstrap";
-@import url('https://fonts.googleapis.com/css?family=Merriweather:400,700');
+@import "products.scss";
+
 
