--- a/assignment3/app/assets/stylesheets/users.scss
+++ b/assignment3/app/assets/stylesheets/users.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+.panel-title {
+  display: flex;
+  justify-content: center;
+  font-size: x-large;
+  color: black;
+}
+
+.panel-primary > .panel-heading {
+  background-color: orange !important;
+  border-color: orange !important;
+}
+
+.panel-primary {
+  border-color: orange !important;
+}
