--- a/assignment3/app/views/products/new.html.erb
+++ b/assignment3/app/views/products/new.html.erb
@@ -1,17 +1,29 @@
-<% provide(:title, 'Add product') %>
-<h1>Add product</h1>
-
-<div>
-  <div>
-    <%= form_with(model: @product, local: true) do |f| %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class:'form-control'%>
-      <%= f.label :description %>
-      <%= f.text_field :description, class:'form-control'%>
-      <%= f.label :price %>
-      <%= f.text_field :price,  class:'form-control'%>
-      <%= f.file_field :image %>
-      <%= f.submit "Create my dish", class: "btn btn-primary" %>
-    <% end %>
+<div id="loginbox" style="margin-top: 50px; margin-left: 35%"
+     class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+  <div class="panel panel-info">
+    <div class="panel-heading">
+      <div class="panel-title">Add product</div>
+    </div>
+    <div style="padding-top: 30px" class="panel-body">
+      <%= form_with(model: @product, local: true) do |f| %>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-barcode"></i></span>
+          <%= f.text_field :name, placeholder: "Name", class: "form-control" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-tag"></i></span>
+          <%= f.text_field :description, placeholder: "Description", class: "form-control" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-euro"></i></span>
+          <%= f.text_field :price, placeholder: "Price", class: "form-control" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
+          <%= f.file_field :image, placeholder:"Image", class:"form-control"%>
+        </div>
+        <%= f.submit "Add dish", class: "btn btn-primary", style: "background-color:orange; border-color:orange; margin-left:35%" %>
+      <% end %>
+    </div>
   </div>
 </div>
