--- a/assignment3/app/views/users/new.html.erb
+++ b/assignment3/app/views/users/new.html.erb
@@ -1,19 +1,30 @@
-<% provide(:title, 'Sign up') %>
-<h1>Sign up</h1>
-
-<div>
-  <div>
-    <%= form_with(model: @user, local: true) do |f| %>
-      <%= render 'shared/error_messages' %>
-      <%= f.label :name %>
-      <%= f.text_field :name, class:'form-control'%>
-      <%= f.label :email %>
-      <%= f.email_field :email, class:'form-control'%>
-      <%= f.label :password %>
-      <%= f.password_field :password,  class:'form-control'%>
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation,  class:'form-control'%>
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+<div id="loginbox" style="margin-top: 50px;margin-left: 35%"
+     class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+  <div class="panel panel-primary">
+    <div class="panel-heading">
+      <div class="panel-title">Sign up</div>
+    </div>
+    <div style="padding-top: 30px" class="panel-body">
+      <%= form_with(model: @user, local: true) do |f| %>
+        <%= render 'shared/error_messages', class: "text-danger" %>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <%= f.text_field :name, class: 'form-control', placeholder: "Name" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+          <%= f.email_field :email, class: 'form-control', placeholder: "Email" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <%= f.password_field :password, class: 'form-control', placeholder: "Password" %>
+        </div>
+        <div style="margin-bottom: 25px" class="input-group">
+          <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+          <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Password Confirmation" %>
+        </div>
+        <%= f.submit "Create my account", class: "btn btn-primary", style: "background-color:orange; border-color:orange; margin-left:30%" %>
+      <% end %>
+    </div>
   </div>
 </div>
