add remember me

--- a/assignment3/app/views/products/new.html.erb
+++ b/assignment3/app/views/products/new.html.erb
@@ -11,7 +11,7 @@
           <%= f.text_field :name, placeholder: "Name", class: "form-control" %>
         </div>
         <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-tag"></i></span>
+          <span class="input-group-addon"><i class="glyphicon glyphicon-book"></i></span>
           <%= f.text_field :description, placeholder: "Description", class: "form-control" %>
         </div>
         <div style="margin-bottom: 25px" class="input-group">
@@ -19,7 +19,7 @@
           <%= f.text_field :price, placeholder: "Price", class: "form-control" %>
         </div>
         <div style="margin-bottom: 25px" class="input-group">
-          <span class="input-group-addon"><i class="glyphicon glyphicon-camera"></i></span>
+          <span class="input-group-addon"><i class="glyphicon glyphicon-picture"></i></span>
           <%= f.file_field :image, placeholder:"Image", class:"form-control"%>
         </div>
         <%= f.submit "Add dish", class: "btn btn-primary", style: "background-color:orange; border-color:orange; margin-left:35%" %>
