--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -16,3 +16,9 @@
 .panel-primary {
   border-color: orange !important;
 }
+
+.btn-custom-signup {
+  background-color:orange;
+  border-color:orange;
+  margin-left:28%
+}
