--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -23,7 +23,7 @@
           <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
           <%= f.password_field :password_confirmation, class: 'form-control', placeholder: "Password Confirmation" %>
         </div>
-        <%= f.submit "Create my account", class: "btn btn-primary", style: "background-color:orange; border-color:orange; margin-left:30%" %>
+        <%= f.submit "Create my account", class: "btn btn-custom-signup" %>
       <% end %>
     </div>
   </div>
