--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,5 +1,5 @@
-<div id="loginbox" style="margin-top: 50px; margin-left: 35%"
-     class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2">
+<div id="loginbox"
+     class="mainbox col-md-3 col-md-offset-2 col-sm-6 col-sm-offset-2 login">
   <div class="panel panel-info">
     <div class="panel-heading">
       <div class="panel-title">Add product</div>
