--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,9 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 <body>
+<% flash.each do |message_type, message| %>
+  <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
 <div>
   <header class="top">
     <div class="dish-container">
@@ -29,12 +32,15 @@
         <% if logged_in? %>
           <li> <%= link_to "Log out", logout_path, method: :delete, class: "btn btn-custom" %> </li>
           <li> <%= link_to "Edit profile", edit_user_path(current_user) %></li>
+          <% if current_user.try(:admin?) && !current_user?(@user)%>
+            <li><%= link_to "Users", users_path %></li>
+          <% end %>
         <% else %>
           <li> <%= link_to "Log in or sign up", login_path, class: "btn btn-custom" %> </li>
         <% end %>
       </ul>
     </div>
-    <%= render 'layouts/info' if params[:action] == "index" && params[:controller]== 'products' %>
+    <%= render 'layouts/info' if params[:action] == "index" && params[:controller] == 'products' %>
 
   </header>
   <%= yield %>
