refactor code and add more admin actions

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -17,3 +17,21 @@
 .panel-info {
   border-color: orange;
 }
+
+.custom-button2 {
+  background-color: orange;
+  border-color: orange;
+  color: white;
+  margin-left: 0px;
+  margin-bottom: 10px;
+}
+
+.img {
+  height: 100px;
+}
+
+.edit-button {
+  background-color:orange;
+  border-color:orange;
+  margin-left:35%;
+}
