--- a/app/views/carts/_order_items.html.erb
+++ b/app/views/carts/_order_items.html.erb
@@ -1,24 +1,43 @@
-<%#OrderItem.all.each do |item| %>
-<!--  <h3><%#= item.product.name %></h3>-->
-<!--  <h5><%#= item.product.price %></h5>-->
-  <%#=  form_with(model: @order_item, local: true) do |f| %>
-    <%#= f.hidden_field :product_id, :value => item.product.id %>
-    <%#= f.number_field :quantity, :value => item.quantity.to_i %>
-    <%#= f.submit "Update Cart " %>
-    <%#= link_to "Remove Items", order_item_path(item), method: :delete, remote: true %>
-  <%# end %>
-<!--  <h2>Subtotal: <%#= item.total %></h2>-->
-<%# end %>
-
-<!--<h3>Subtotal is: <%#= current_cart.subtotal %></h3>-->
-
-
-<% OrderItem.all.each do |item| %>
-  <div>
-      <h4><b><%= item.product.name %></b></h4>
-      <p>$<%= item.product.price %></p>
-      <p><%= item.quantity %></p>
-  </div>
-  <%= link_to "Remove Item", @order_item, method: :delete,
-              data: { confirm: "Are you sure you want to delete this item?" } %>
-<%end %>
+<div class="container">
+  <h3 class="custom-title">Your Order</h3>
+  <hr>
+  <table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+      <th class="custom-table">Item</th>
+      <th class="custom-table">Price</th>
+      <th class="custom-table">Quantity</th>
+      <th class="custom-table"></th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr <% OrderItem.all.each do |item| %>>
+      <td class="custom"><%= item.product.name %></td>
+      <td class="custom">$<%= item.product.price * item.quantity %></td>
+      <td class="custom"><%= form_with(model: @order_item, local: true) do |f| %>
+          <%= f.number_field :quantity, :value => item.quantity.to_i, style: "width: 50px" %>
+        <% end %>
+      </td>
+      <td class="custom">
+        <%= link_to "Update Item", order_items_update_path(item), class: "btn btn-info btn-sm" %>
+        <%= link_to "Remove Item", item, method: :delete, class: "btn btn-danger btn-sm" %>
+      </td>
+    </tr>
+      <% end %>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="custom">Total: $</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td class="custom"><%= link_to "Place Order" %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <%= link_to "Empty Cart", cart_url, method: :delete, class: "btn custom-button" %>
+</div>
