--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,16 +1,24 @@
-<% provide(:title, 'All users') %>
-<h1>All users</h1>
-<%= will_paginate %>
-<ul class="users-page">
-  <% @users.each do |user| %>
-    <li>
-      <%= user.name %>
-      <%= user.email%>
-      <% if current_user && current_user.try(:admin?) && !current_user?(@user) %>
-         <%= link_to "delete", @user, method: :delete,
-                      data: { confirm: "Are you sure you want to delete this user?" } %>
+<div class="container">
+  <h3 class="custom-title">Users Directory</h3>
+  <hr>
+  <table class="table table-bordered table-striped">
+    <thead class="thead-dark">
+    <tr>
+      <th>Name</th>
+      <th>Email</th>
+      <th>Action</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr
+      <% @users.each do |user| %>>
+      <td> <%= user.name %> </td>
+      <td> <%= user.email %> </td>
+      <td>
+        <%= link_to "Delete User", user, method: :delete, data: {confirm: "Are you sure you want to delete this user?"}, class: "btn btn-danger btn-sm" %>
+      </td>
+    </tr>
       <% end %>
-    </li>
-  <% end %>
-</ul>
-<%= will_paginate %>
+    </tbody>
+  </table>
+</div>
