Update and delete from cart work properly + add admin namespace

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -35,3 +35,9 @@
   border-color:orange;
   margin-left:35%;
 }
+
+.add-to-cart {
+  background-color:orange;
+  border-color:orange;
+  color: white;
+}
