--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -15,7 +15,7 @@
       <td> <%= user.name %> </td>
       <td> <%= user.email %> </td>
       <td>
-        <%= link_to "Delete User", user, method: :delete, data: {confirm: "Are you sure you want to delete this user?"}, class: "btn btn-danger btn-sm" %>
+        <%= link_to "Delete User", admin_user_path(user), method: :delete, data: {confirm: "Are you sure you want to delete this user?"}, class: "btn btn-danger btn-sm" %>
       </td>
     </tr>
       <% end %>
