--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,23 +36,25 @@
               Profile
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <%= link_to "Go to cart", cart_path, class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
               <%= link_to "Edit profile", edit_user_path(current_user), class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
               <%= link_to "Log out", logout_path, method: :delete, class: "dropdown-item" %>
             </div>
           </li>
-          <% if current_user.try(:admin?) && !current_user?(@user) %>
+          <% if current_user.try(:admin?) %>
             <li class="navigation-item dropdown active no-bullets" style="list-style-type: none;">
               <a class="nav-link btn btn-custom" href="#" id="navbarDropdown" role="button"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Admin
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <%= link_to "All Users", users_path, class: "dropdown-item" %>
+                <%= link_to "All Users", admin_users_path, class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
                 <%= link_to "All Orders", class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
-                <%= link_to "All Products", '/adminproducts', class: "dropdown-item" %>
+                <%= link_to "All Products", admin_products_path, class: "dropdown-item" %>
               </div>
             </li>
           <% end %>
