--- a/app/views/products/_all_products.html.erb
+++ b/app/views/products/_all_products.html.erb
@@ -7,9 +7,9 @@
         <p><%= product.description %></p>
         <p class="dish-price">$ <%= product.price %></p>
         <% if logged_in? %>
-          <%= link_to "Add to cart", "/order_items/#{product.id}", method: 'post' %>
+          <%= link_to "Add to cart", "/order_items/#{product.id}", method: 'post', class:"btn add-to-cart" %>
         <% else %>
-          <%= link_to "Add to cart", login_url%>
+          <%= link_to "Add to cart", login_url, class:"btn add-to-cart"%>
         <% end %>
       </div>
     </div>
