--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,8 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <%= link_to "Go to cart", cart_path, class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
+              <%= link_to "See your orders", orders_path, class: "dropdown-item" %>
+              <div class="dropdown-divider"></div>
               <%= link_to "Edit profile", edit_user_path(current_user), class: "dropdown-item" %>
               <div class="dropdown-divider"></div>
               <%= link_to "Log out", logout_path, method: :delete, class: "dropdown-item" %>
@@ -52,7 +54,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to "All Users", admin_users_path, class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
-                <%= link_to "All Orders", class: "dropdown-item" %>
+                <%= link_to "All Orders", admin_orders_path ,class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
                 <%= link_to "All Products", admin_products_path, class: "dropdown-item" %>
               </div>
