--- a/app/views/products/_all_products.html.erb
+++ b/app/views/products/_all_products.html.erb
@@ -1,7 +1,8 @@
 <footer id="container2">
   <% Product.all.each do |product| %>
     <div class="card">
-      <%= image_tag product.image, class: "dish-image" if product.image.attached? %>
+      <%#= image_tag product.image,direct_upload: true, class: "dish-image" if product.image.attached? %>
+      <%= cl_image_tag(product.image.key, class: "dish-image") %>
       <div class="card-details-container">
         <h4><b><%= product.name %></b></h4>
         <p><%= product.description %></p>
