fix some indentation

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -14,7 +14,7 @@ $font: Arial;
   background-color: $secondary-color;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: asset_url("coffee_shop3.jpg");
+  background-image: asset_url("coffee_shop.jpg");
   height: 100%;
 
   .dish-container {
