--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -21,11 +21,12 @@
       <td> <%= order.created_at%> </td>
       <td> <%- OrderProduct.where(order_id: order.id).each do |order_product|%>
           <%= Product.find(order_product.product_id).name%>
+          <%= order_product.quantity%>
           <%end %>
           </td>
       <td>
         <% if order.handled == true %>
-          <p>Handled!</p>
+          <p>Confirmed</p>
         <% else %>
           <%= link_to "Handle", handle(order) %>
         <% end %>
