fix some indentation

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -18,11 +18,12 @@
       <td> <%= order.user.name %> </td>
       <td> <%= order.address %> </td>
       <td> <%= order.phone_number %> </td>
-      <td> <%= order.created_at%> </td>
-      <td> <%- OrderProduct.where(order_id: order.id).each do |order_product|%>
-          <%= Product.find(order_product.product_id).name%>
-          <%= order_product.quantity%>
-        <%end %>
+      <td> <%= order.created_at %> </td>
+      <td>
+        <%- OrderProduct.where(order_id: order.id).each do |order_product| %>
+          <%= Product.find(order_product.product_id).name %>
+          <%= order_product.quantity %>
+        <% end %>
       </td>
       <td>
         <% if order.handled == true %>
