--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,1 +1,2 @@
-<%= image_tag generate_qr(request.base_url + order_products_path(order: @order)), class: "qr-code" %>
+<%= image_tag generate_qr(request.base_url + order_products_path(order: @order)), class: "qr-code", style:"margin-left:40%" %>
+<p>Scan this code to go to your order!</p>
