--- a/app/assets/stylesheets/order_products.scss
+++ b/app/assets/stylesheets/order_products.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the Order_Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+@media only screen and (max-width: 600px) {
+  body {
+
+  }
+}
