--- a/app/views/order_products/index.html.erb
+++ b/app/views/order_products/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h3 class="custom-title">Your orders</h3>
+  <h3 class="custom-title">Your order</h3>
   <hr>
   <table class="table table-bordered table-striped">
     <thead class="thead-dark">
