some code refactoring

--- a/app/assets/stylesheets/orders.scss
+++ b/app/assets/stylesheets/orders.scss
@@ -4,5 +4,10 @@
 
 .scan-order {
   margin-top: 15px;
-  margin-left: 40%;
+  margin-left: 41%;
+}
+
+.payment-text {
+  text-align: center;
+  mergin-top: 10px;
 }
