--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
           <span class='bullet'></span>
           <li> CONTACTS</li>
           <% if logged_in? %>
-            <li class="navigation-item dropdown active no-bullets" style="list-style-type: none;">
+            <li class="navigation-item dropdown active" style="list-style-type: none;">
               <a class="nav-link btn btn-custom" href="#" id="navbarDropdown" role="button"
                  data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Profile
@@ -41,7 +41,7 @@
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <%= link_to "Go to cart", cart_path, class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
-                <%= link_to "See your orders", orders_path, class: "dropdown-item" %>
+                <%= link_to "Your orders", orders_path, class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
                 <%= link_to "Edit profile", edit_user_path(current_user), class: "dropdown-item" %>
                 <div class="dropdown-divider"></div>
@@ -49,7 +49,7 @@
               </div>
             </li>
             <% if current_user.try(:admin?) %>
-              <li class="navigation-item dropdown active no-bullets" style="list-style-type: none;">
+              <li class="navigation-item dropdown active" style="list-style-type: none;">
                 <a class="nav-link btn btn-custom" href="#" id="navbarDropdown" role="button"
                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Admin
